added Microstream Health to bom/pom.xml

--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1079,6 +1079,11 @@
             	<artifactId>helidon-microstream-core</artifactId>
             	<version>${helidon.version}</version>
             </dependency>
+            <dependency>
+            	<groupId>io.helidon.microstream</groupId>
+            	<artifactId>helidon-microstream-health</artifactId>
+            	<version>${helidon.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
