--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -904,6 +904,7 @@
                 <artifactId>helidon-logging-log4j</artifactId>
                 <version>${helidon.version}</version>
             </dependency>
+            <!-- Microstream support -->
             <dependency>
             	<groupId>io.helidon.microstream</groupId>
             	<artifactId>helidon-microstream-core</artifactId>
@@ -912,6 +913,11 @@
             <dependency>
             	<groupId>io.helidon.microstream</groupId>
             	<artifactId>helidon-microstream-health</artifactId>
+            	<version>${helidon.version}</version>
+            </dependency>
+            <dependency>
+            	<groupId>io.helidon.microstream</groupId>
+            	<artifactId>helidon-microstream-metrics</artifactId>
             	<version>${helidon.version}</version>
             </dependency>
         </dependencies>
