Refactoring: Moved Microstream project to integrations project

--- a/integrations/microstream/core/pom.xml
+++ b/integrations/microstream/core/pom.xml
@@ -9,8 +9,8 @@
 		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
-	<artifactId>helidon-microstream-core</artifactId>
-	<name>Helidon Microstream Core</name>
+	<artifactId>helidon-integrations-microstream</artifactId>
+	<name>Helidon Integrations Microstream</name>
 	<packaging>jar</packaging>
 
 	<repositories>
