--- a/integrations/microstream/health/pom.xml
+++ b/integrations/microstream/health/pom.xml
@@ -1,30 +1,29 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>io.helidon.microstream</groupId>
-    <artifactId>helidon-microstream-project</artifactId>
-    <version>2.1.1-SNAPSHOT</version>
-  </parent>
-  
-  <artifactId>helidon-microstream-metrics</artifactId>
-  <name>Helidon Microstream Metrics</name>
-  <packaging>jar</packaging>
-  
-  <description>Metrics support for microstream</description>
-  
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>io.helidon.microstream</groupId>
+		<artifactId>helidon-microstream-project</artifactId>
+		<version>2.1.1-SNAPSHOT</version>
+	</parent>
+
+	<artifactId>helidon-integrations-microstream-health</artifactId>
+	<name>Helidon Integrations Microstream Health</name>
+	<packaging>jar</packaging>
+
+	<description>Health check for Microstream</description>
+
+	<dependencies>
 		<dependency>
 			<groupId>io.helidon.microstream</groupId>
 			<artifactId>helidon-microstream-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>io.helidon.metrics</groupId>
-			<artifactId>helidon-metrics</artifactId>
+			<groupId>io.helidon.health</groupId>
+			<artifactId>helidon-health</artifactId>
 		</dependency>
- 		<dependency>
-            <groupId>io.helidon.config</groupId>
-            <artifactId>helidon-config</artifactId>
-        </dependency>
 
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
@@ -53,5 +52,5 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-  
+
 </project>
