--- a/integrations/microstream/core/pom.xml
+++ b/integrations/microstream/core/pom.xml
@@ -4,8 +4,8 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>io.helidon.microstream</groupId>
-		<artifactId>helidon-microstream-project</artifactId>
+		<groupId>io.helidon.integrations.microstream</groupId>
+		<artifactId>helidon-integrations-microstream-project</artifactId>
 		<version>2.1.1-SNAPSHOT</version>
 	</parent>
 
