--- a/integrations/microstream/metrics/pom.xml
+++ b/integrations/microstream/metrics/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.helidon.microstream</groupId>
-    <artifactId>helidon-microstream-project</artifactId>
+    <groupId>io.helidon.integrations.microstream</groupId>
+	<artifactId>helidon-integrations-microstream-project</artifactId>
     <version>2.1.1-SNAPSHOT</version>
   </parent>
   
@@ -14,8 +14,8 @@
   
   <dependencies>
 		<dependency>
-			<groupId>io.helidon.microstream</groupId>
-			<artifactId>helidon-microstream-core</artifactId>
+			<groupId>io.helidon.integrations.microstream</groupId>
+			<artifactId>helidon-integrations-microstream</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>io.helidon.metrics</groupId>
