--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1089,6 +1089,11 @@
             	<artifactId>helidon-integrations-microstream-metrics</artifactId>
             	<version>${helidon.version}</version>
             </dependency>
+            <dependency>
+            	<groupId>io.helidon.integrations.microstream</groupId>
+            	<artifactId>helidon-integrations-microstream-cache</artifactId>
+            	<version>${helidon.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
