--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -1082,6 +1082,11 @@
             </dependency>
             <dependency>
             	<groupId>io.helidon.integrations.microstream</groupId>
+            	<artifactId>helidon-integrations-microstream-cdi</artifactId>
+            	<version>${helidon.version}</version>
+            </dependency>
+            <dependency>
+            	<groupId>io.helidon.integrations.microstream</groupId>
             	<artifactId>helidon-integrations-microstream-health</artifactId>
             	<version>${helidon.version}</version>
             </dependency>
