--- a/integrations/microstream/pom.xml
+++ b/integrations/microstream/pom.xml
@@ -20,6 +20,7 @@
 	
 	<modules>
 		<module>cache</module>
+		<module>cdi</module>
 		<module>core</module>
 		<module>health</module>
 		<module>metrics</module>
