--- a/integrations/microstream/pom.xml
+++ b/integrations/microstream/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<groupId>io.helidon.integrations</groupId>
 		<artifactId>helidon-integrations-project</artifactId>
-		<version>2.3.0-SNAPSHOT</version>
+		<version>2.4.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>io.helidon.integrations.microstream</groupId>
@@ -33,7 +33,7 @@
 	<name>Helidon Integrations Microstream Project</name>
 
 	<properties>
-		<microstream.version>04.02.00-MS-GA-SNAPSHOT</microstream.version>
+		<microstream.version>05.00.01-MS-GA</microstream.version>
 	</properties>
 	
 	<modules>
